Add an example parser setup using the java tools
This uses the JavaTools from the JDK to generate the internal structures we need to use in gazelle. This is strongly a work in progress, and isn't going to do anything useful, and may in fact slow the whole process down a great deal.